// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`className is added to the root element 1`] = `undefined`;

exports[`list item body with timestamp property applied  1`] = `
<div>
  <div
    class="pf-c-notification-drawer__list-item-description"
  />
  <div
    class="pf-c-notification-drawer__list-item-timestamp"
  >
    5 minutes ago
  </div>
</div>
`;

exports[`renders with PatternFly Core styles 1`] = `
<div>
  <div
    class="pf-c-notification-drawer__list-item-description"
  />
</div>
`;
